<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background_app"
    android:paddingHorizontal="16dp"
    android:paddingVertical="32dp"
    tools:context=".ImcCalculatorActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvNameSaludo"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="48dp"
        android:background="@color/white"

        android:backgroundTint="@color/Background_component"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_NameSaludo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text =" hola Pepe !!"
                android:textSize="25dp"
                android:textAllCaps="true"
                android:textColor="@color/white" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/viewMale"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/Background_comnponent_selected"
        app:cardCornerRadius="26dp"
        app:layout_constraintEnd_toStartOf="@+id/viewFemale"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvNameSaludo">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_gatito"
                app:tint="@color/cardview_dark_background" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/male"
                android:textAllCaps="true"
                android:textColor="@color/title_text" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/viewFemale"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/Background_component"
        app:cardCornerRadius="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/viewMale"
        app:layout_constraintTop_toBottomOf="@+id/cvNameSaludo"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="180dp"
                android:layout_height="80dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_gatita"
                app:tint="@color/cardview_dark_background" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/female"
                android:textAllCaps="true"
                android:textColor="@color/title_text" />


        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_viewHeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="@color/Background_component"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewFemale">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textAllCaps="true"
                android:textColor="@color/title_text" />

            <TextView
                android:id="@+id/textViewHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="120 cm"
                android:textColor="@color/white"
                android:textSize="38sp"
                android:textStyle="bold" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rs_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stepSize="1"
                android:valueFrom="120"
                android:valueTo="200" />
        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_viewWeight"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/Background_component"
        app:cardCornerRadius="26dp"
        app:layout_constraintEnd_toStartOf="@+id/cv_viewAge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_viewHeight">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peso"
                android:textAllCaps="true"
                android:textColor="@color/title_text" />

            <TextView
                android:id="@+id/tv_textPeso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="38sp"
                android:textStyle="bold"
                tools:text="10 kg" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnSubstractionWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_add"
                    app:backgroundTint="@color/BackgroundFab"
                    app:tint="@color/white" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnPlusWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_minus"
                    app:backgroundTint="@color/BackgroundFab"
                    app:tint="@color/white" />


            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_viewAge"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/Background_component"
        app:cardCornerRadius="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_viewWeight"
        app:layout_constraintTop_toBottomOf="@id/cv_viewHeight">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/Age"
                android:textAllCaps="true"
                android:textColor="@color/title_text" />

            <TextView
                android:id="@+id/tv_textAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="38sp"
                android:textStyle="bold"
                tools:text="40 años" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnSAddAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_add"
                    app:backgroundTint="@color/BackgroundFab"
                    app:tint="@color/white" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnSubstractionAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_minus"
                    app:backgroundTint="@color/BackgroundFab"
                    app:tint="@color/white" />

            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_Calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/Calculate"
        android:layout_marginStart="40dp"
        android:focusedSearchResultHighlightColor="@color/Background_app"
        android:layout_marginEnd="40dp"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/cv_viewWeight"
        />



</androidx.constraintlayout.widget.ConstraintLayout>